# spotify-to-plex

./: directorystruct.sh  pyproject.toml
splex/: Dockerfile  docker-compose.yml  requirements.txt  run.py
splex/app/: __init__.py
splex/app/models/: models.py
splex/app/routes/: auth_routes.py
splex/app/services/: plex.py  spotify.py
splex/app/services/spotiplex/: __init__.py  lidarr.py  main.py
splex/app/static/css/: style.css
splex/app/static/js/: socketio.js
splex/app/templates/: dashboard.html  layout.html  login.html  progress.html
splex/instance/: config.py
