[tool.poetry]
name = "spotiplex-sync"
version = "0.1.0"
description = ""
authors = ["0xChloe <chloe@catastrophesoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
PlexAPI = "^4.15.10"
spotipy = "^2.23.0"
requests = "^2.31.0"
rtoml = "^0.10.0"
celery = "^5.3.6"
Flask-SocketIO = "^5.3.6"
docker = "^7.0.0"
Flask-Login = "^0.6.3"
Authlib = "^1.3.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
